Correction d'un bug dans la version mobile concernant le responsive des cards de property.

--- a/public/styles/components/card.scss
+++ b/public/styles/components/card.scss
@@ -57,14 +57,11 @@
       background: white;
     }
 
-    .card-image {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
+    .card {
+      aspect-ratio: 16/9;
     }
 
     .card-title {
       font-size: 18px;
     }
-
 }
